fixed gap

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -8,6 +8,10 @@
   --carousel-card-gap: 28px;
 }
 
+.carousel.block.large {
+  --carousel-card-gap: 12px;
+}
+
 .carousel.block.wedges {
   width: 100%;
   margin: 100px 0;
